--- a/MovieList/MyCollectionViewCell.xib
+++ b/MovieList/MyCollectionViewCell.xib
@@ -16,17 +16,8 @@
                 <rect key="frame" x="0.0" y="0.0" width="265" height="307"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TmJ-ed-ri7">
-                        <rect key="frame" x="0.0" y="255" width="265" height="52"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="52" id="vsl-zM-lKH"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="tgo-Qg-rnr">
-                        <rect key="frame" x="32.666666666666657" y="0.0" width="200" height="200"/>
+                        <rect key="frame" x="32.666666666666657" y="53.666666666666657" width="200" height="200"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="200" id="R1U-7V-a4Z"/>
                             <constraint firstAttribute="width" constant="200" id="xGp-y1-3c8"/>
@@ -37,16 +28,12 @@
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="tgo-Qg-rnr" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="JMN-WX-y6w"/>
-                <constraint firstAttribute="bottom" secondItem="TmJ-ed-ri7" secondAttribute="bottom" symbolic="YES" id="Xeg-OM-AXI"/>
-                <constraint firstItem="TmJ-ed-ri7" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="hwz-i1-FHW"/>
-                <constraint firstAttribute="trailing" secondItem="TmJ-ed-ri7" secondAttribute="trailing" id="o1A-tC-Jlr"/>
-                <constraint firstItem="tgo-Qg-rnr" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="wwL-t6-ZpG"/>
+                <constraint firstItem="tgo-Qg-rnr" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="D89-JD-XsV"/>
+                <constraint firstItem="tgo-Qg-rnr" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="nej-DV-n5p"/>
             </constraints>
             <size key="customSize" width="265" height="307"/>
             <connections>
                 <outlet property="myImageView" destination="tgo-Qg-rnr" id="p8u-gl-jud"/>
-                <outlet property="myLabel" destination="TmJ-ed-ri7" id="FZA-gf-1pf"/>
             </connections>
             <point key="canvasLocation" x="159.54198473282443" y="-3.1690140845070425"/>
         </collectionViewCell>
